log and cache were configure